AC_INIT()
AC_CONFIG_HEADERS(config.h)
AC_PROG_CXX
PKG_PROG_PKG_CONFIG
PKG_CHECK_MODULES(gtk,gtk+-2.0,,AC_ERROR([You need GTK+ 2.0]))
PKG_CHECK_MODULES(cairo,cairo-xlib)
# PKG_CHECK_MODULES(sigc,sigc++-2.0)
PKG_CHECK_MODULES(fftw3,fftw3,AC_DEFINE(HAVE_DFT,[],[Define this if you have FFTW3 library]),
[AC_MSG_RESULT([No ffwt3 found, disabling FFT support])
fftw3_CFLAGS=
fftw3_LIBS=
])

AC_OUTPUT(Makefile)
